faq accordion card

--- a/faq-accordion-card-main/index.html
+++ b/faq-accordion-card-main/index.html
@@ -80,6 +80,6 @@
   </main>
   
 
-  <script src="/faq-accordion-card-main/script.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
